Stable version without book covers and pagination